# LOG6308---Syst-mes-de-recommandations

./: .gitignore  LOG6308---Syst-mes-de-recommandations.code-workspace
Atelier-1/: main.ipynb  pyproject.toml
Atelier-2/: atelier_2b.ipynb  main.ipynb  pyproject.toml
Atelier-3/: matrix_factorization.ipynb
Atelier-4/: atelier_4.ipynb  pyproject.toml
Atelier-5/: README.md  atelier_5.ipynb  pyproject.toml
Atelier-formatif-(b)/: main.ipynb
