[tool.poetry]
name = "atelier-4"
version = "0.1.0"
description = ""
authors = ["Nicolas Depelteau <nicolas@depelteau.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
notebook = "^7.0.6"
ipykernel = "^6.29.0"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
python-dotenv = "^1.0.0"
wandb = "^0.16.2"
hydra-core = "^1.3.2"
pandas = "^2.2.0"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
